test_cases/runnable/fail_variable_2.out
lli: ./test_cases/runnable/fail_variable_2.compiled:1:1: error: expected top-level entity
Fatal error: exception Stdlib.Parsing.Parse_error
^
